--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-    <button class="button is-light" id="save-button" style="margin-bottom: 1rem;">Save binary</button>
+    <button class="button" id="save-button" style="margin-bottom: 1rem;">Save binary</button>
     <div class="row">
         <div class="col bytes" id="bytes" style="width: 400px; height: 400px;">
         </div>
