--- a/index.html
+++ b/index.html
@@ -5,19 +5,32 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-    <button class="button" id="save-button" style="margin-bottom: 1rem;">Save binary</button>
-    <div class="row">
-        <div class="col bytes" id="bytes" style="width: 400px; height: 400px;">
-        </div>
-        <div class="col editor" id="editor" style="width: 600px; height: 400px;">
+    <div class="field is-grouped">
+        <p class="control"><button class="button" id="save-bin-button">Save binary</button>
+        </p>
+
+        <p class="control"><button class="button" id="save-patch-button">Save patch</button>
+        </p>
+
+        <div class="field has-addons">
+            <p class="control"><a class="button is-static">Base offset</a>
+            </p>
+
+            <p class="control"><input class="input" id="offset-input" type="text" value="0">
+            </p>
         </div>
     </div>
 
-    <script src="node_modules/file-saver/dist/FileSaver.js"></script>
+    <div class="row">
+        <div class="col bytes" id="bytes" style="width: 400px; height: 400px;">
+        </div>
 
-    <script src="node_modules/monaco-editor/min/vs/loader.js"></script>
+        <div class="col editor" id="editor" style="width: 600px; height: 400px;">
+        </div>
+    </div>
+    <script src="node_modules/file-saver/dist/FileSaver.js"></script> 
+    <script src="node_modules/monaco-editor/min/vs/loader.js"></script> 
     <script src="src/editor.js"></script>
-
     <link type="text/css" rel="stylesheet" href="css/bulma.css">
     <link type="text/css" rel="stylesheet" href="css/main.css">
 </body>
