Apply offset during sync

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="control"><a class="button is-static">Base offset</a>
             </p>
 
-            <p class="control"><input class="input" id="offset-input" type="text" value="0">
+            <p class="control"><input class="input" id="offset-input" type="text" value="0x00000000">
             </p>
         </div>
     </div>
