Add byte and fill directives

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     <div class="content">
       <h4>Supported Directives</h4>
       <ul>
-          <li><code>.lbl $ASCII</code>: Create label at line offset in program's symbol table, use it in completions;</li>
-          <li><code>.org $HEX</code>: Override base offset to given origin offset;</li>
+          <li><code>.byte: $HEX</code>: Alias for <code>.fill: 1,$HEX</code>;</li>
+          <li><code>.fill: $N,$HEX</code>: Insert <code>$HEX</code> bytes <code>$N</code> times at current offset;</li>
+          <li><code>.lbl: $ASCII</code>: Create label at line offset in program's symbol table, use it in completions;</li>
+          <li><code>.org: $HEX</code>: Override base offset with given origin offset;</li>
       </ul>
     </div>
 
