Fix org in patch; Fix single line cache cases

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li><code>.byte: $HEX</code>: Alias for <code>.fill: 1,$HEX</code>;</li>
           <li><code>.fill: $N,$HEX</code>: Insert <code>$HEX</code> bytes <code>$N</code> times at current offset;</li>
           <li><code>.lbl: $ASCII</code>: Create label at line offset in program's symbol table, use it in completions;</li>
-          <li><code>.org: $HEX</code>: Override base offset with given origin offset;</li>
+          <li><code>.org: $HEX</code>: Override current offset with given origin offset (relative to base address);</li>
       </ul>
     </div>
 
