--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="col bytes" id="bytes">
         </div>
 
-        <div class="col editor" id="editor">
+        <div class="col assembly" id="assembly">
         </div>
     </div>
 
